--- a/src/forms/GuestForm/styles.css
+++ b/src/forms/GuestForm/styles.css
@@ -1,3 +1,5 @@
+@import "variables";
+
 .main {
   lost-flex-container: row;
 }
@@ -13,66 +15,15 @@
   min-height: 465px;
 }
 
+.error {
+  color: $coral-red;
+}
+
 .label {
-  color: rgba(0, 0, 0, 0.3);
+  color: rgba($black, 0.4);
   display: inline-block;
   font-size: 12px;
   font-weight: 500;
+  margin-bottom: 12px;
   margin-top: 17px;
-}
-
-.tables {
-  lost-flex-container: row;
-
-  margin-top: 12px;
-}
-
-.table {
-  align-items: center;
-  border: 3px solid transparent;
-  box-sizing: border-box;
-  color: white;
-  cursor: pointer;
-  display: flex;
-  flex-direction: column;
-  height: 80px;
-  justify-content: center;
-  position: relative;
-  width: 80px;
-
-  &.free {
-    background-color: green;
-  }
-
-  &.busy {
-    background-color: orange;
-  }
-
-  &.full {
-    background-color: red;
-  }
-
-  &.overCapacity {
-    background-color: rgba(0, 0, 0, 0.3);
-    cursor: default;
-  }
-
-  &.selected {
-    border-color: #607d8b;
-  }
-}
-
-.tableItem {
-  lost-waffle: 1/6 6 5px;
-}
-
-.tableNum {
-  font-size: 10px;
-  font-weight: bold;
-  left: 0;
-  margin-top: 4px;
-  position: absolute;
-  text-align: center;
-  top: 0;
-  width: 100%;
 }
