--- a/src/forms/GuestForm/styles.css
+++ b/src/forms/GuestForm/styles.css
@@ -1,17 +1,17 @@
 @import "variables";
 
 .main {
-  lost-flex-container: row;
+  display: flex;
 }
 
 /* Components */
 .aside {
-  lost-column: 4/12;
+  width: 200px;
 }
 
 .content {
-  lost-column: 8/12;
-
+  flex: 1;
+  margin-left: 30px;
   min-height: 465px;
 }
 
