--- a/src/components/App/components/UserPanel/styles.css
+++ b/src/components/App/components/UserPanel/styles.css
@@ -14,6 +14,21 @@ $height : 60px;
 }
 
 /* Components */
+.logout {
+  color: rgba($white, 0.75);
+  cursor: pointer;
+  margin-left: 10px;
+  line-height: 0.5;
+
+  &:hover {
+    color: $white;
+  }
+
+  i {
+    font-size: 16px;
+  }
+}
+
 .username {
   font-weight: 600;
 }
