Add notification; Minor UX improvements

--- a/src/pages/LoginPage/styles.css
+++ b/src/pages/LoginPage/styles.css
@@ -20,6 +20,12 @@ $panel-width   : 350px;
 .logo {
   height: 50px;
   margin: 0 auto;
+
+  img {
+    height: inherit;
+    margin: 0 auto;
+    width: inherit;
+  }
 }
 
 .panel {
