--- a/templates/views/html.njk
+++ b/templates/views/html.njk
@@ -12,13 +12,11 @@
   <body>
     <div id="root"></div>
 
-    {% if window %}
-    <script>
-      {% for key, value in window %}
-        window.{{ key }} = {{ value | safe }};
-      {% endfor %}
-    </script>
+    {% if env %}
+    <script> window.env = {{ env | dump | safe }}; </script>
     {% endif %}
+
+    {% include "templates/views/_libs.njk" %}
 
     <script src="{{ main.js }}"></script>
   </body>
