Add check in page

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,7 +1,9 @@
 @import "sanitize.css/sanitize.css";
 
+@import "react-select/dist/react-select.css";
+
 @import "variables";
-/* @import "overrides"; */
+@import "overrides";
 
 a {
   color: $black;
